web-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-demo-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-demo-svc
            port:
              number: 80
